fixes main page links and logos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,10 @@
       <header>
 
         <br/>
-        <img src="/SchoolRNA2020/logos/sib_logo_high.jpg" height="70">
+        <img src="/single-cell_sib_scilifelab_2021/logos/sib_logo_high.jpg" height="70">
         <br/>
         <br/>
-        <img src="/SchoolRNA2020/logos/NCCR.png" height="60">
+        <img src="/single-cell_sib_scilifelab_2021/logos/nbis_logo.png" height="60">
 <!--
         <br/>
         <br/>
@@ -52,22 +52,22 @@
         <br/>
         <br/>
 
-        <a href="/SchoolRNA2020/README.html">Main Page&nbsp;&nbsp;<img border="0" src="https://cdn2.iconfinder.com/data/icons/inverticons-stroke-vol-1/32/home_house_building_main_page-512.png" width="20" height="20"></a>
+        <a href="/single-cell_sib_scilifelab_2021/README.html">Main Page&nbsp;&nbsp;<img border="0" src="https://cdn2.iconfinder.com/data/icons/inverticons-stroke-vol-1/32/home_house_building_main_page-512.png" width="20" height="20"></a>
         <br/>
         <br/>
-        <a href="/SchoolRNA2020/schedule.html">Schedule&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/158264/schedule.svg" width="20" height="20"></a>
+        <a href="/single-cell_sib_scilifelab_2021/schedule.html">Schedule&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/158264/schedule.svg" width="20" height="20"></a>
         <br/>
         <br/>
-        <a href="/SchoolRNA2020/precourse.html">Pre-course&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/19652/maths-class-materials-cross-of-a-pencil-and-a-ruler.svg" width="20" height="20"></a>
+        <a href="/single-cell_sib_scilifelab_2021/precourse.html">Pre-course&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/19652/maths-class-materials-cross-of-a-pencil-and-a-ruler.svg" width="20" height="20"></a>
         <br/>
         <br/>
-        <a href="/SchoolRNA2020/projects.html">Projects&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/1025/task.svg" width="20" height="20"></a>
+        <a href="/single-cell_sib_scilifelab_2021/projects.html">Projects&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/1025/task.svg" width="20" height="20"></a>
         <br/>
         <br/>
-        <a href="/SchoolRNA2020/travel_info.html">Travel Info&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/4199/placeholder-on-a-map.svg" width="20" height="20"></a>
+        <a href="/single-cell_sib_scilifelab_2021/travel_info.html">Travel Info&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/4199/placeholder-on-a-map.svg" width="20" height="20"></a>
         <br/>
         <br/>
-        <a href="/SchoolRNA2020/faq.html">FAQ&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/83019/faq-button.svg" width="20" height="20"></a>
+        <a href="/single-cell_sib_scilifelab_2021/faq.html">FAQ&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/83019/faq-button.svg" width="20" height="20"></a>
         <br/>
         <br/>
 
