--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
 
-    <title>Computational RNA Biology</title>
+    <title>Advanced Single-cell Omics</title>
     <!--
     <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
     -->
