--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,18 @@
         <a href="/single-cell_sib_scilifelab_2021/projects.html">Projects&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/1025/task.svg" width="20" height="20"></a>
         <br/>
         <br/>
+        <a href="/single-cell_sib_scilifelab_2021/project_spatial/README.html">Travel Info&nbsp;&nbsp;<img border="0" src="logos/spatial_transcriptomics.png" width="20" height="20"></a>
+        <br/>
+        <br/>
+        <a href="/single-cell_sib_scilifelab_2021/project_velocity/README.html">Travel Info&nbsp;&nbsp;<img border="0" src="logos/rna_velocity.png" width="20" height="20"></a>
+        <br/>
+        <br/>
+        <a href="/single-cell_sib_scilifelab_2021/project_omics/README.html">Travel Info&nbsp;&nbsp;<img border="0" src="logos/omics_integration.png" width="20" height="20"></a>
+        <br/>
+        <br/>
+        <a href="/single-cell_sib_scilifelab_2021/project_dnn/README.html">Travel Info&nbsp;&nbsp;<img border="0" src="logos/deep_learning.png" width="20" height="20"></a>
+        <br/>
+        <br/>
         <a href="/single-cell_sib_scilifelab_2021/travel_info.html">Travel Info&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/4199/placeholder-on-a-map.svg" width="20" height="20"></a>
         <br/>
         <br/>
