--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,10 @@
       <header>
 
         <br/>
-        <img src="/single-cell_sib_scilifelab_2021/logos/sib_logo_high.jpg" height="70">
+        <img src="/single-cell_sib_scilifelab_2021/logos/nbis_logo_crop.jpg" width="120">
         <br/>
         <br/>
-        <img src="/single-cell_sib_scilifelab_2021/logos/nbis_logo.png" height="60">
+        <img src="/single-cell_sib_scilifelab_2021/logos/sib_logo_hig_crop.png" width="120">
 <!--
         <br/>
         <br/>
