--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,13 +71,13 @@
         <a href="/single-cell_sib_scilifelab_2021/projects.html">Projects&nbsp;&nbsp;<img border="0" src="https://www.svgrepo.com/show/1025/task.svg" width="20" height="20"></a>
         <br/>
         <br/>
-        <a href="/single-cell_sib_scilifelab_2021/project_spatial/README.html">Spatial&nbsp;&nbsp;<img border="0" src="/single-cell_sib_scilifelab_2021/logos/spatial_transcriptomics.png" width="20" height="20"></a>
+        <a href="/single-cell_sib_scilifelab_2021/project_spatial/README.html">Spatial Transcriptomics&nbsp;&nbsp;<img border="0" src="/single-cell_sib_scilifelab_2021/logos/spatial_transcriptomics.png" width="20" height="20"></a>
         <br/>
         <br/>
-        <a href="/single-cell_sib_scilifelab_2021/project_velocity/README.html">Velocity&nbsp;&nbsp;<img border="0" src="/single-cell_sib_scilifelab_2021/logos/rna_velocity.png" width="20" height="20"></a>
+        <a href="/single-cell_sib_scilifelab_2021/project_velocity/README.html">RNA Velocity&nbsp;&nbsp;<img border="0" src="/single-cell_sib_scilifelab_2021/logos/rna_velocity.png" width="20" height="20"></a>
         <br/>
         <br/>
-        <a href="/single-cell_sib_scilifelab_2021/project_omics/README.html">Multi-Omics&nbsp;&nbsp;<img border="0" src="/single-cell_sib_scilifelab_2021/logos/omics_integration.png" width="20" height="20"></a>
+        <a href="/single-cell_sib_scilifelab_2021/project_omics/README.html">Multi-Omics integration&nbsp;&nbsp;<img border="0" src="/single-cell_sib_scilifelab_2021/logos/omics_integration.png" width="20" height="20"></a>
         <br/>
         <br/>
         <a href="/single-cell_sib_scilifelab_2021/project_dnn/README.html">Deep Learning&nbsp;&nbsp;<img border="0" src="/single-cell_sib_scilifelab_2021/logos/deep_learning.png" width="20" height="20"></a>
