--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <img src="/single-cell_sib_scilifelab_2021/logos/nbis_logo_crop.png" width="120">
         <br/>
         <br/>
-        <img src="/single-cell_sib_scilifelab_2021/logos/sib_logo_hig_crop.png" width="120">
+        <img src="/single-cell_sib_scilifelab_2021/logos/sib_logo_hig_crop.jpg" width="120">
 <!--
         <br/>
         <br/>
