updates webpage layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,13 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+
 </head>
 <body>
 
   <div class="wrapper">
+    
     <div class="myheader1" id="topmenu" >
       <header class="myheader2" >
         <a href="/single-cell_sib_scilifelab_2021/README.html">
@@ -46,7 +49,7 @@
         </a>
         <a href="/single-cell_sib_scilifelab_2021/project_spatial/README.html">
           <button class="menuButton myHighlight" >
-            Spatial Transcriptomics&nbsp;&nbsp;
+            Spatial&nbsp;&nbsp;
             <img border="0" src="/single-cell_sib_scilifelab_2021/logos/spatial_transcriptomics.png" width="30" height="30" style="vertical-align:middle;">
           </button>
         </a>
@@ -58,7 +61,7 @@
         </a>
         <a href="/single-cell_sib_scilifelab_2021/project_omics/README.html">
           <button class="menuButton myHighlight" >
-            Omics Integration&nbsp;&nbsp;
+            Multi-Omics&nbsp;&nbsp;
             <img border="0" src="/single-cell_sib_scilifelab_2021/logos/omics_integration.png" width="30" height="30" style="vertical-align:middle;">
           </button>
         </a>
