--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h3 { /* Header 3 */ font-size: 18px; color: Black; font-weight: bold }
 
 code.r{ /* Code block */ font-size: 14px; color: Black; }
 
-body { /* Normal  */ font-size: 14px; color: Black; padding: 0px; margin: 0px; background-color: white }
+body { /* Normal  */ font-size: 14px; color: Black; padding: 0px 0px; margin: 0px; background-color: #F2F2F2 }
 
 td {  /* Table  */ font-size: 14px; color: Black; }
 
@@ -30,7 +30,7 @@ pre { /* Code block - determines code spacing between lines */ font-size: 14px; 
   border: none;
   color: #666666;
   font-weight: bold;
-  padding: 15px 20px;
+  padding: 10px 10px;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
@@ -73,19 +73,20 @@ pre { /* Code block - determines code spacing between lines */ font-size: 14px; 
 .wrapper{
   width: 1100px;
   height: 800px;
+  margin: 0px 0px
 }
 
 
 .myheader1 {
-  width: 240px;
+  width: 180px;
   padding: 0px;
   float: left;
   height: 800px;
 }
 
 .myheader2{
-  width: 240px;
-  padding: 40px 0px;
+  width: 180px;
+  padding: 10px 0px;
   text-align: right;
   position: fixed;
   /* position: absolute; */
