updates webpage layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,10 @@
     <div class="myheader1" id="topmenu" >
       <header class="myheader2" >
         <a href="/single-cell_sib_scilifelab_2021/README.html">
-          <button class="menuButton myHighlight" >
-            <img src="/single-cell_sib_scilifelab_2021/logos/nbis_logo_crop.png" width="100">
-            <img src="/single-cell_sib_scilifelab_2021/logos/sib_logo_hig_crop.jpg" width="80">
+          <button class="menuButton myHighlight" style="text-align: center" >
+            <img src="/single-cell_sib_scilifelab_2021/logos/logo_nbis.png" width="75">
+            <div style="float: left; width: 10px; heigh: 10px"></div>
+            <img src="/single-cell_sib_scilifelab_2021/logos/logo_sib.png" width="75">
             <h1 style="text-align:center; margin: 0px; border: 0px">Main</h1>
           </button>
         </a>
@@ -42,7 +43,7 @@
         <a href="/single-cell_sib_scilifelab_2021/projects.html">
           <button class="menuButton myHighlight" >
             Projects&nbsp;&nbsp;
-            <img border="0" src="https://www.svgrepo.com/show/83019/faq-button.svg" width="30" height="30" style="vertical-align:middle;">
+            <img border="0" src="https://www.svgrepo.com/show/1025/task.svg" width="30" height="30" style="vertical-align:middle;">
           </button>
         </a>
         <a href="/single-cell_sib_scilifelab_2021/project_spatial/README.html">
