updates webpage layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,17 +95,7 @@
     </div>
 
   </div>
-  <script type="text/javascript">
-
-  var btns = document.getElementsByClassName("menuButton")
-  var url = window.location.href
-  for (var i = 0; i < btns.length; i++) {
-    if (url  == btns[i].closest("a").href) {
-      btns[i].classList.add('active')
-    }
-  }
-
-  </script>
+  <script src="/single-cell_sib_scilifelab_2021/scripts.js"></script>
   <footer>
 
   </footer>
