--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/single-cell_sib_scilifelab_2021/styles.css">
 
   <meta name="viewport" content="width=device-width">
 </head>
