--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
       <header class="myheader2" >
         <a href="/single-cell_sib_scilifelab_2021/README.html">
           <button class="menuButton myHighlight" style="text-align: center" >
-            <img src="/single-cell_sib_scilifelab_2021/logos/logo_nbis.png" width="75">
+            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_nbis.png" width="70">
             <div style="float: left; width: 20px; heigh: 10px"></div>
-            <img src="/single-cell_sib_scilifelab_2021/logos/logo_sib.png" width="75">
+            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_sib.png" width="70">
             <h1 style="text-align:center; margin: 0px; border: 0px">Main</h1>
           </button>
         </a>
@@ -95,7 +95,7 @@
     </div>
 
   </div>
-  <script src="/single-cell_sib_scilifelab_2021/scripts.js"></script>
+  <script src="/single-cell_sib_scilifelab_2021/_includes/scripts.js"></script>
   <footer>
 
   </footer>
