updates webpage layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,6 +90,11 @@
       <section class="myContent2">
         <div>
           {{ content }}
+          <br/>
+          <a href="/single-cell_sib_scilifelab_2021/README.html">
+          <button class="button zoom myHighlight">⬅︎ &nbsp; Back to main</button>
+          </a>
+          <br/>
         </div>
       </section>
     </div>
