updates webpage layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@
     </div>
 
   </div>
-  <script src="/single-cell_sib_scilifelab_2021/_includes/scripts.js"></script>
+  <script src="/single-cell_sib_scilifelab_2021/scripts.js" type="text/javascript"></script>
   <footer>
 
   </footer>
