--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ pre { /* Code block - determines code spacing between lines */ font-size: 14px; 
   border: none;
   color: #666666;
   font-weight: bold;
-  padding: 15px 15px;
+  padding: 10px 15px;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
@@ -101,15 +101,13 @@ pre { /* Code block - determines code spacing between lines */ font-size: 14px; 
 .myContent1 {
   width: calc(100% - 240px);
   padding: 0px;
-  margin: 0px 10px;
   float: left;
   height:100%;
 }
 
 .myContent2 {
-  width: 100%;
-  margin: 40px 10px;
-  padding: 0px;
+  max-width: calc(100% - 240px);
+  padding: 40px 30px;
   background-color: white;
   min-height:800px;
 }
