--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
             <button class="button zoom myHighlight">⬅︎ &nbsp; Back to main</button>
           </a>
           <br/>
-          <div width="100%" height="20px">
+          <div width="100%" height="20px">&nbsp;&nbsp;</div>
         </div>
       </section>
     </div>
