updates webpage layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
         <hr>
         <a href="/single-cell_sib_scilifelab_2021/faq.html">
           <button class="menuButton myHighlight" >
-            Pre-course&nbsp;&nbsp;
+            FAQ&nbsp;&nbsp;
             <img border="0" src="https://www.svgrepo.com/show/83019/faq-button.svg" width="30" height="30" style="vertical-align:middle;">
           </button>
         </a>
@@ -87,11 +87,11 @@
 
     </div>
     <div class="myContent1">
-      <section class="myContent2">
-        <div>
+      <!-- <section class="myContent2"> -->
+        <div class="myContent2">
           {{ content }}
         </div>
-      </section>
+      <!-- </section> -->
     </div>
 
   </div>
