--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ pre { /* Code block - determines code spacing between lines */ font-size: 14px; 
 .myContent1 {
   width: calc(100% - 240px);
   padding: 0px;
+  background-color: white;
   float: left;
   height:100%;
 }
@@ -109,6 +110,7 @@ pre { /* Code block - determines code spacing between lines */ font-size: 14px; 
   width: auto;
   padding: 40px 30px;
   background-color: white;
+  /* float: left; */
   min-height:800px;
 }
 
