--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,6 +89,11 @@
       <!-- <section class="myContent2"> -->
         <div class="myContent2">
           {{ content }}
+          <br/>
+          <a href="/single-cell_sib_scilifelab_2021/README.html">
+            <button class="button zoom myHighlight">⬅︎ &nbsp; Back to main</button>
+          </a>
+          <br/>
         </div>
       <!-- </section> -->
     </div>
