--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,6 +88,8 @@
     <div class="myContent1">
       <!-- <section class="myContent2"> -->
         <div class="myContent2">
+          {::options parse_block_html="true" /}
+
           {{ content }}
           <br/>
           <a href="/single-cell_sib_scilifelab_2021/README.html">
