--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
       <header class="myheader2" >
         <a href="/single-cell_sib_scilifelab_2021/README.html">
           <button class="menuButton myHighlight" style="text-align: center" >
-            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_nbis.png" width="70">
+            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_nbis.png" width="90">
             <div style="float: left; width: 20px; heigh: 10px"></div>
-            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_sib.png" width="70">
-            <h1 style="text-align:center; margin: 0px; border: 0px">Main</h1>
+            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_sib.png" width="90">
+            <!-- <h1 style="text-align:center; margin: 0px; border: 0px">Main</h1> -->
           </button>
         </a>
 
@@ -88,8 +88,6 @@
     <div class="myContent1">
       <!-- <section class="myContent2"> -->
         <div class="myContent2">
-          {::options parse_block_html="true" /}
-
           {{ content }}
           <br/>
           <a href="/single-cell_sib_scilifelab_2021/README.html">
