--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,8 @@
       <header class="myheader2" >
         <a href="/single-cell_sib_scilifelab_2021/README.html">
           <button class="menuButton myHighlight" style="text-align: center" >
-            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_nbis.png" width="90">
-            <p margin="0px">&nbsp;&nbsp;</p>
-            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_sib.png" width="90">
+            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_nbis.png" width="100px">
+            <img border="0" src="/single-cell_sib_scilifelab_2021/logos/logo_sib.png" width="100px">
             <!-- <h1 style="text-align:center; margin: 0px; border: 0px">Main</h1> -->
           </button>
         </a>
